CMakeLists cleanup(removed not required find_package and added rtf_add_plugin)

--- a/src/models-consistency/CMakeLists.txt
+++ b/src/models-consistency/CMakeLists.txt
@@ -11,9 +11,6 @@ cmake_minimum_required(VERSION 3.0)
 set(PROJECTNAME iKiniDynConsistencyTest)
 project(${PROJECTNAME})
 
-# add the required cmake packages
-find_package(RTF 1.1 COMPONENTS DLL)
-find_package(YARP REQUIRED)
 find_package(ICUB REQUIRED)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})
@@ -33,8 +30,8 @@ include_directories(${CMAKE_SOURCE_DIR}
 add_definitions(-D_USE_MATH_DEFINES)
 
 # add the source codes to build the plugin library
-add_library(${PROJECTNAME} MODULE iKiniDynConsistencyTest.h
-                                  iKiniDynConsistencyTest.cpp)
+rtf_add_plugin(${PROJECT_NAME}    HEADERS iKiniDynConsistencyTest.h
+                                  SOURCES iKiniDynConsistencyTest.cpp)
 # add required libraries
 target_link_libraries(${PROJECTNAME} ${RTF_LIBRARIES}
                ${YARP_LIBRARIES} YARP::YARP_rtf
