--- a/src/motor-tests/CMakeLists.txt
+++ b/src/motor-tests/CMakeLists.txt
@@ -11,9 +11,6 @@ cmake_minimum_required(VERSION 3.0)
 set(PROJECTNAME MotorTest)
 project(${PROJECTNAME})
 
-# add the required cmake packages
-find_package(RTF 1.1 COMPONENTS DLL)
-find_package(YARP)
 
 # add include directories
 include_directories(${CMAKE_SOURCE_DIR}
@@ -21,8 +18,8 @@ include_directories(${CMAKE_SOURCE_DIR}
                     ${YARP_INCLUDE_DIRS})
 
 # add the source codes to build the plugin library
-add_library(${PROJECTNAME} MODULE MotorTest.h
-                                  MotorTest.cpp)
+rtf_add_plugin(${PROJECT_NAME}    HEADERS MotorTest.h
+                                  SOURCES MotorTest.cpp)
 
 # add required libraries 
 target_link_libraries(${PROJECTNAME} ${RTF_LIBRARIES}
