--- a/src/cartesian-control/reaching-tolerance/CMakeLists.txt
+++ b/src/cartesian-control/reaching-tolerance/CMakeLists.txt
@@ -8,10 +8,6 @@ cmake_minimum_required(VERSION 3.0)
 # set the project name
 project(CartesianControlReachingToleranceTest)
 
-# add the required cmake packages
-find_package(RTF 1.1 COMPONENTS DLL)
-find_package(YARP REQUIRED)
-
 list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 
 # add include directories
@@ -23,7 +19,8 @@ include_directories(${CMAKE_SOURCE_DIR}
 add_definitions(-D_USE_MATH_DEFINES)
 
 # add the source codes to build the plugin library
-add_library(${PROJECT_NAME} MODULE ${PROJECT_NAME}.h ${PROJECT_NAME}.cpp)
+rtf_add_plugin(${PROJECT_NAME} HEADERS ${PROJECT_NAME}.h
+                               SOURCES ${PROJECT_NAME}.cpp)
 
 # add required libraries
 target_link_libraries(${PROJECT_NAME} ${RTF_LIBRARIES} ${YARP_LIBRARIES} YARP::YARP_rtf)
