--- a/src/cartesian-control/simple-p2p-movement/CMakeLists.txt
+++ b/src/cartesian-control/simple-p2p-movement/CMakeLists.txt
@@ -7,10 +7,6 @@ cmake_minimum_required(VERSION 3.0)
 # set the project name
 project(CartesianControlSimpleP2pMovementTest)
 
-# add the required cmake packages
-find_package(RTF 1.1 COMPONENTS DLL)
-find_package(YARP REQUIRED)
-
 list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 
 # add include directories
@@ -22,7 +18,8 @@ include_directories(${CMAKE_SOURCE_DIR}
 add_definitions(-D_USE_MATH_DEFINES)
 
 # add the source codes to build the plugin library
-add_library(${PROJECT_NAME} MODULE ${PROJECT_NAME}.h ${PROJECT_NAME}.cpp)
+rtf_add_plugin(${PROJECT_NAME} HEADERS ${PROJECT_NAME}.h
+                               SOURCES ${PROJECT_NAME}.cpp)
 
 # add required libraries
 target_link_libraries(${PROJECT_NAME} ${RTF_LIBRARIES} ${YARP_LIBRARIES} YARP::YARP_rtf)
