--- a/src/torqueControl-accuracy/CMakeLists.txt
+++ b/src/torqueControl-accuracy/CMakeLists.txt
@@ -10,15 +10,12 @@ cmake_minimum_required(VERSION 3.0)
 set(PROJECTNAME TorqueControlAccuracy)
 project(${PROJECTNAME})
 
-find_package(RTF 1.1 COMPONENTS DLL)
-find_package(YARP)
-
 include_directories(${CMAKE_SOURCE_DIR}
                     ${RTF_INCLUDE_DIRS}
                     ${YARP_INCLUDE_DIRS})
 
-add_library(${PROJECTNAME} MODULE TorqueControlAccuracy.h
-                                  TorqueControlAccuracy.cpp)
+add_library(${PROJECTNAME} HEADERS TorqueControlAccuracy.h
+                           SOURCES TorqueControlAccuracy.cpp)
 
 target_link_libraries(${PROJECTNAME} ${RTF_LIBRARIES}
                       ${YARP_LIBRARIES} YARP::YARP_rtf)
