major update to * PositionControlAccuracyExternaPid (auto filename functionality, vup,vdown stiction params) * POsitionControlAccuracy Changes fw Pid gains with the ones chosen from command line

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(src/positionDirect)
 
 # Build positionControl-accuracy tests
 add_subdirectory(src/positionControl-accuracy)
+add_subdirectory(src/positionControl-accuracy-ExternalPid)
 
 # Build openloop tests
 add_subdirectory(src/openloop-consistency)
