Update cmake minumum required version
Ensure that policies set in the main CMake are not overridden in
subdirectories.

--- a/src/cartesian-control/reaching-tolerance/CMakeLists.txt
+++ b/src/cartesian-control/reaching-tolerance/CMakeLists.txt
@@ -3,7 +3,9 @@
 #          Giulia Vezzani <giulia.vezzani@iit.it>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-cmake_minimum_required(VERSION 3.0)
+if(NOT DEFINED CMAKE_MINIMUM_REQUIRED_VERSION)
+  cmake_minimum_required(VERSION 3.5)
+endif()
 
 # set the project name
 project(CartesianControlReachingToleranceTest)
