--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         # the following fix the problem described in https://github.community/t5/GitHub-Actions/Windows-tests-worked-yesterday-broken-today/m-p/43839#M5530
         echo "C:\Program Files\Git\bin" >> ${GITHUB_PATH}
-        echo "VCPKG_ROBOTOLOGY_ROOT=D:/vcpkg-robotology" >> ${GITHUB_ENV}
+        echo "VCPKG_ROBOTOLOGY_ROOT=C:/robotology/vcpkg" >> ${GITHUB_ENV}
         
     - name: Display environment variables
       shell: bash
@@ -50,13 +50,13 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
-        # To avoid spending a huge time compiling vcpkg dependencies, we download a root that comes precompiled with all the ports that we need
-        choco install -y wget unzip
-        # To avoid problems with non-relocatable packages, we unzip the archive exactly in the same C:/vcpkg-robotology
-        # that has been used to create the pre-compiled archive
-        cd D:/
-        wget https://github.com/robotology-playground/robotology-superbuild-dependencies/releases/download/v0.0.2/vcpkg-robotology.zip
-        unzip vcpkg-robotology.zip
+        choco install -y curl wget unzip
+        latest_tag=$(curl --silent https://api.github.com/repos/robotology/robotology-superbuild-dependencies-vcpkg/releases/latest | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
+        echo "Installing robotology-superbuild-dependencies-vcpkg@${latest_tag}"
+        cd C:/
+        wget https://github.com/robotology/robotology-superbuild-dependencies-vcpkg/releases/download/${latest_tag}/vcpkg-robotology.zip
+        unzip vcpkg-robotology.zip -d C:/
+        rm vcpkg-robotology.zip
 
     - name: Dependencies [Ubuntu]
       if: matrix.os == 'ubuntu-latest'
