--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         sudo apt update
         sudo apt install git build-essential pkg-config zip unzip zlib1g-dev cmake libace-dev coinor-libipopt-dev libeigen3-dev \
                          qtbase5-dev qtdeclarative5-dev qtmultimedia5-dev libtinyxml-dev libgsl-dev wget curl autoconf \
-                         autogen automake libtool mlocate libopencv-dev liblua5.1-dev
+                         autogen automake libtool mlocate libopencv-dev
 
     - name: Dependencies [macOS]
       if: matrix.os == 'macOS-latest'
@@ -73,7 +73,7 @@ jobs:
         # Workaround for https://github.com/robotology/robotology-superbuild/issues/565
         brew upgrade  python@3.9 || brew link --overwrite python@3.9
         brew upgrade
-        brew install ace cmake eigen gsl ipopt opencv pkg-config qt5 lua
+        brew install ace cmake eigen gsl ipopt opencv pkg-config qt5
     - name: Source-based Dependencies [Windows] 
       if: matrix.os == 'windows-latest'
       shell: bash
