--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
         cd robot-testing-framework && mkdir -p build && cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_ROBOTOLOGY_ROOT}/scripts/buildsystems/vcpkg.cmake \
                      -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                     -DENABLE_WEB_LISTENER:BOOL=ON ..
+                     -DENABLE_LUA_PLUGIN:BOOL=OFF -DENABLE_WEB_LISTENER:BOOL=ON ..
         cmake --build . --config ${{ matrix.build_type }} --target INSTALL 
         # yarp
         cd ${GITHUB_WORKSPACE}
@@ -126,7 +126,8 @@ jobs:
         cd ${GITHUB_WORKSPACE}
         git clone https://github.com/robotology/robot-testing-framework.git --depth 1 --branch devel
         cd robot-testing-framework && mkdir -p build && cd build
-        cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_LUA_PLUGIN:BOOL=ON -DENABLE_WEB_LISTENER:BOOL=ON ..
+        cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+        -DENABLE_LUA_PLUGIN:BOOL=OFF ENABLE_WEB_LISTENER:BOOL=ON ..
         cmake --build . --config ${{ matrix.build_type }} --target install 
         # yarp
         cd ${GITHUB_WORKSPACE}
