--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,9 +69,9 @@ jobs:
     - name: Dependencies [macOS]
       if: matrix.os == 'macOS-latest'
       run: |
+        # Workaround for https://github.com/actions/virtual-environments/issues/3733
+        brew uninstall mongodb-community
         brew update
-        # Workaround for https://github.com/robotology/robotology-superbuild/issues/565
-        brew upgrade  python@3.9 || brew link --overwrite python@3.9
         brew upgrade
         brew install ace cmake eigen gsl ipopt opencv pkg-config qt5
     - name: Source-based Dependencies [Windows] 
