--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,4 +99,6 @@ add_subdirectory(src/skinWrapperTest)
 # Build system status tests (needs yarp newer than f0c9e83a66d1e2685361f82dd98b20ed6479ec04)
 #add_subdirectory(src/system-status)
 
+# Build IMU test
+add_subdirectory(src/imu)
 
