--- a/suites/contexts/icubGazeboSim/test_imu.ini
+++ b/suites/contexts/icubGazeboSim/test_imu.ini
@@ -2,4 +2,4 @@ robot     ${robotname}
 model     /home/mgloria/iit/robotology-superbuild/build/install/share/iCub/robots/iCubGazeboV2_5/model.urdf
 part      head
 sensor    head_imu_0
-frame     head
+frame     head_imu_0
