Define fixtures and contexts file for imu test

--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -1,5 +1,5 @@
 robot     ${robotname}
 model     /home/mgloria/iit/robotology-superbuild/build/install/share/iCub/robots/iCubGazeboV2_7/model.urdf
-part      head
+port      /${robotname}/head/inertials
 sensor    head_imu_0
 frame     head_imu_0
