Better handle idyntree dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(CMAKE_SHARED_MODULE_PREFIX "")
 # options
 option(ICUB_TESTS_USES_ICUB_MAIN "Turn on to compile the tests that depend on the icub-main repository" ON)
 option(ICUB_TESTS_USES_CODYCO    "Turn on to compile the test that depend on the codyco-superbuil repository" OFF)
+option(ICUB_TESTS_USES_IDYNTREE "Turn on to compile the test that depend on the idyntree repository" OFF)
 
 # Build examples?
 add_subdirectory(example/cpp)
@@ -100,5 +101,8 @@ add_subdirectory(src/skinWrapperTest)
 #add_subdirectory(src/system-status)
 
 # Build IMU test
-add_subdirectory(src/imu)
+if(ICUB_TESTS_USES_IDYNTREE)
+    find_package(iDynTree REQUIRED)
+    add_subdirectory(src/imu)
+endif()
 
