--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -1,5 +1,5 @@
 robot     ${robotname}
-model     /path/to/your/robot/model.urdf
+model     model.urdf
 port      /${robotname}/head/inertials
 sensor    head_imu_0
 frame     head_imu_0
