Make remoteControlBoards and controlled joints parametrized lists

--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -1,5 +1,8 @@
-robot     ${robotname}
-model     model.urdf
-port      /${robotname}/head/inertials
-sensor    head_imu_0
-frame     head_imu_0
+robot                   ${robotname}
+model                   model.urdf
+port                    /${robotname}/head/inertials
+part                    head
+remote_controlboards    ("torso", "head")
+sensor                  head_imu_0
+frame                   head_imu_0
+mean_error              0.1
