Add doxygen documentation

--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -2,7 +2,7 @@ robot                   ${robotname}
 model                   model.urdf
 port                    /${robotname}/head/inertials
 part                    head
-remote_controlboards    ("torso", "head")
+controlboards           ("torso", "head")
 sensor                  head_imu_0
 frame                   head_imu_0
 mean_error              0.1
