--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -3,6 +3,8 @@ model                   model.urdf
 port                    /${robotname}/head/inertials
 part                    head
 controlboards           ("torso", "head")
+controlled_joints       ("torso_pitch", "torso_roll", "torso_yaw", "neck_pitch", "neck_roll", "neck_yaw")
+move_joints             ("neck_pitch", "neck_roll", "neck_yaw")
 sensor                  head_imu_0
 frame                   head_imu_0
 mean_error              0.1
