First refactor with implementations

--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -1,10 +1,16 @@
 robot                   ${robotname}
 model                   model.urdf
-port                    /${robotname}/head/inertials
-part                    head
-controlboards           ("torso", "head")
-controlled_joints       ("torso_pitch", "torso_roll", "torso_yaw", "neck_pitch", "neck_roll", "neck_yaw")
-move_joints             ("neck_pitch", "neck_roll", "neck_yaw")
-sensor                  head_imu_0
-frame                   head_imu_0
+port                    /${robotname}/alljoints/FT
+controlboards           ("torso", "head", "left_arm", "right_arm")
+axesNames               ("torso_pitch", "torso_roll", "torso_yaw", "neck_pitch", "neck_roll", "neck_yaw", "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw")
+test_list               ("head_imu_0", "l_arm_ft", "r_arm_ft")
 mean_error              0.1
+
+[head_imu_0]
+move_joints ("neck_pitch", "neck_roll")
+
+[l_arm_ft]
+move_joints ("l_shoulder_pitch")
+
+[r_arm_ft]
+move_joints ("r_shoulder_pitch")
