--- a/src/imu/CMakeLists.txt
+++ b/src/imu/CMakeLists.txt
@@ -1,14 +1,16 @@
 add_definitions(-D_USE_MATH_DEFINES)
+find_package(robometry)
 
 robottestingframework_add_plugin(imu HEADERS imu.h
                                      SOURCES imu.cpp)
 
 # add required libraries
-target_link_libraries(imu RobotTestingFramework::RTF
-                                      RobotTestingFramework::RTF_dll
-                                      YARP::YARP_robottestingframework
-                                      iDynTree::idyntree-high-level 
-                                      iDynTree::idyntree-estimation)
+target_link_libraries(imu   RobotTestingFramework::RTF
+                            RobotTestingFramework::RTF_dll
+                            YARP::YARP_robottestingframework
+                            iDynTree::idyntree-high-level 
+                            iDynTree::idyntree-estimation
+                            robometry::robometry)
 # set the installation options
 install(TARGETS imu
         EXPORT imu
