Test all the IMUs while doing a sequence of movements

--- a/src/imu/CMakeLists.txt
+++ b/src/imu/CMakeLists.txt
@@ -16,3 +16,5 @@ install(TARGETS imu
         EXPORT imu
         COMPONENT runtime
         LIBRARY DESTINATION lib)
+
+install(PROGRAMS move.sh DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
