--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -3,14 +3,5 @@ model                   model.urdf
 port                    /${robotname}/alljoints/inertials
 remoteControlBoards     ("torso", "head", "left_arm", "right_arm")
 axesNames               ("torso_pitch", "torso_roll", "torso_yaw", "neck_pitch", "neck_roll", "neck_yaw", "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw")
-sensorsList             ("head_imu_0", "l_arm_ft", "r_arm_ft")
+sensorsList             ("all")
 meanError               0.1
-
-[head_imu_0]
-moveJoints ("neck_pitch", "neck_roll")
-
-[l_arm_ft]
-moveJoints ("l_shoulder_pitch")
-
-[r_arm_ft]
-moveJoints ("r_shoulder_pitch")
