--- a/suites/contexts/icub/test_imu.ini
+++ b/suites/contexts/icub/test_imu.ini
@@ -3,5 +3,6 @@ model                   model.urdf
 port                    /${robotname}/alljoints/inertials
 remoteControlBoards     ("torso", "head", "left_arm", "right_arm")
 axesNames               ("torso_pitch", "torso_roll", "torso_yaw", "neck_pitch", "neck_roll", "neck_yaw", "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw")
-sensorsList             ("all")
-maxError               0.1
+; sensorsList             ("head_imu_0", "l_arm_ft", "r_arm_ft")
+sensorsList ("all")
+maxError                0.1
