--- a/pixi.toml
+++ b/pixi.toml
@@ -3,11 +3,14 @@ name = "icub-tests"
 version = "0.0.0"
 description = "Set of tests to check the functionalities of a robot"
 authors = ["Martina Gloria <martina.gloria@iit.it>"]
-channels = ["conda-forge"]
-platforms = ["linux-64", "linux-aarch64", "win-64", "osx-arm64", "osx-64"]
+channels = ["conda-forge", "robotology"]
+platforms = ["linux-64", "win-64", "osx-64"]
+
+[activation]
+scripts = ["set_path.sh"]
 
 [tasks]
-build_imu_test = {cmd = "cmake -S. -B.build -DICUB_TESTS_COMPILES_IMU_TEST=ON"}
+build_imu_test = {cmd = "cmake -DCMAKE_INSTALL_PREFIX=$CMAKE_INSTALL_PREFIX -S. -B.build -DICUB_TESTS_COMPILES_IMU_TEST=ON"}
 compile_imu_test = {cmd = "cmake --build .build", depends_on = ["build_imu_test"]}
 imu_sim_test = {cmd = "robottestingframework-testrunner --verbose --suite suites/imu-icubGazeboSim.xml", depends_on = ["compile_imu_test"]}
 imu_test = {cmd = "robottestingframework-testrunner --verbose --suite suites/imu.xml", depends_on = ["compile_imu_test"]}
@@ -17,3 +20,4 @@ robometry = ">=1.2.3,<1.3"
 idyntree = ">=10.3.0,<10.4"
 yarp = ">=3.9.0,<3.10"
 robot-testing-framework = ">=2.0.1,<2.1"
+icub-main = ">=2.5.0,<2.6"
