--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,11 @@ jobs:
     steps:
     - uses: actions/checkout@main
 
-    - uses: conda-incubator/setup-miniconda@v2
+    - uses: conda-incubator/setup-miniconda@v3
       with:
-        miniforge-variant: Mambaforge
         miniforge-version: latest
         channels: conda-forge,robotology
         channel-priority: true
-
 
     - name: Dependencies
       shell: bash -l {0}
@@ -40,9 +38,9 @@ jobs:
         # Workaround for https://github.com/conda-incubator/setup-miniconda/issues/186
         conda config --remove channels defaults
         # Compilation related dependencies
-        mamba install cmake compilers make ninja pkg-config
+        conda install cmake compilers make ninja pkg-config
         # Actual dependencies
-        mamba install ycm-cmake-modules yarp opencv idyntree robot-testing-framework icub-main robometry
+        conda install ycm-cmake-modules yarp opencv idyntree robot-testing-framework icub-main robometry
 
     - name: Configure [Linux&macOS]
       if: contains(matrix.os, 'macos') || contains(matrix.os, 'ubuntu')
